Pipe errors from Cast certificate verification and report metrics.

Make certificate verification errors available to the Cast sender through
the Cast channel interface.

Increase metric reporting details to get a better picture of any issues
out in the field.

Bug: 746658
Test: Unittests
Change-Id: I568220d3949aa3878b71a1c62c5cc01c79d09dbb
Reviewed-on: https://chromium-review.googlesource.com/577114
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Reviewed-by: Stephen Lanham <slan@chromium.org>
Reviewed-by: mark a. foltz <mfoltz@chromium.org>
Reviewed-by: Jesse Doherty <jwd@chromium.org>
Reviewed-by: Eric Roman <eroman@chromium.org>
Commit-Queue: Ryan Chung <ryanchung@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488534}
Former-commit-id: fccb33ed98cdc4ccb8e4f2b012dc230e58e13ec5